hw6_lab10/tests/errors/sem_val_reassign.kt
// EXPECT: semantic error — reassigning val
fun main() {
    val x = 10
    x = 20
}
